--- a/ProjectsDS/Week1/day3/homework_ex/Ejercicio1.ipynb
+++ b/ProjectsDS/Week1/day3/homework_ex/Ejercicio1.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ejercicios de Internet\n",
+    "\n",
     "#Ejercicio 1\n",
     "\n",
     "Escribir un programa que muestre por pantalla la cadena ¡Hola Mundo!"
@@ -11,15 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Hola Mundo!\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = \"Hola Mundo!\"\n",
     "print(x)\n"
@@ -55,15 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Hola rochilandia!\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Username = \"rochilandia\"\n",
     "print(\"Hola \" + Username + \"!\")\n"
@@ -71,15 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Hola rochilandia!\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Name = input(\"introduce tu nombre de usuario: \")\n",
     "print(\"Hola \" + Name + \"!\")\n"
@@ -96,15 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Hola rochilandia!\nrochilandia\nrochilandia\nrochilandia\nrochilandia\nrochilandia\n\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Name = input(\"introduce tu nombre de usuario: \")\n",
     "print(\"Hola \" + Name + \"!\")\n",
@@ -123,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Nombre: Rosario\ntiene \n7\n letras\n"
+     "text": "Nombre: Rochi\ntiene \n5\n letras\n"
     }
    ],
    "source": [
@@ -150,6 +128,87 @@
     "\n",
     "Escribir un programa que realice la siguiente operación aritmética (3+2/2⋅5)2."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.25\n"
+    }
+   ],
+   "source": [
+    "x = 3 + 2\n",
+    "y = 2 * 5\n",
+    "z = x/y\n",
+    "r = z **2\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Ejercicio 7\n",
+    "\n",
+    "Escribir un programa que pregunte al usuario por el número de horas trabajadas y el coste por hora. Después debe mostrar por pantalla la paga que le corresponde."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "223.5\n"
+    }
+   ],
+   "source": [
+    "horas = input(\"Cantodad de horas de trabajo: \")\n",
+    "valor = input(\"El valor por hora es: \")\n",
+    "x = float(horas) * float(valor)\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Ejercicio 8\n",
+    "\n",
+    "Escribir un programa que lea un entero positivo, n, introducido por el usuario y después muestre en pantalla la suma de todos los enteros desde 1 hasta n. La suma de los n primeros enteros positivos puede ser calculada de la siguiente forma: suma = n(n+1)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15.0\n"
+    }
+   ],
+   "source": [
+    "n = int(input(\"Introduce number: \"))\n",
+    "z = n+1\n",
+    "r = n*z/2\n",
+    "print(r)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
