--- a/ProjectsDS/Week1/day4/exercises/Ejercicio_Biblioteca.ipynb
+++ b/ProjectsDS/Week1/day4/exercises/Ejercicio_Biblioteca.ipynb
@@ -124,24 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": "[1] ('El mal de Corcira', 4)\n[1] ('Un mundo feliz', 2)\n[1] ('Lolita', 5)\n[1] ('Crimen y castigo', 2)\n[1] ('Python from for to pro', 0)\n[1] ('El señor de los anillos', 6)\n[1] ('Cien años de soledad', 5)\n[1] ('Harry Potter', 9)\n[1] ('Lectura Fácil', 4)\n[1] ('Seda', 2)\n[1] ('La chica de nieve', 6)\n[1] ('El día que se perdió la cordura', 3)\n[1] ('Data Science', 0)\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'array' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-dc2f6ae5aaea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Seda\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
-     ]
     }
    ],
    "source": [
@@ -158,6 +147,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "('El mal de Corcira', 4)\n('Un mundo feliz', 2)\n('Lolita', 5)\n('Crimen y castigo', 2)\n('Python from for to pro', 0)\n('El señor de los anillos', 6)\n('Cien años de soledad', 5)\n('Harry Potter', 9)\n('Lectura Fácil', 4)\n('Seda', 2)\n('La chica de nieve', 6)\n('El día que se perdió la cordura', 3)\n('Data Science', 0)\n"
+    }
+   ],
+   "source": [
+    "biblioteca = [(\"El mal de Corcira\",4),(\"Un mundo feliz\", 2),(\"Lolita\", 5),\\\n",
+    "              (\"Crimen y castigo\",2),(\"Python from for to pro\", 0),(\"El señor de los anillos\", 6),\\\n",
+    "              (\"Cien años de soledad\", 5),(\"Harry Potter\", 9),(\"Lectura Fácil\", 4),(\"Seda\", 2),\\\n",
+    "              (\"La chica de nieve\", 6),(\"El día que se perdió la cordura\", 3), (\"Data Science\", 0)]\n",
+    "\n",
+    "for u in biblioteca:\n",
+    "    print(u)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2\n"
+    }
+   ],
+   "source": [
+    "biblioteca = [(\"El mal de Corcira\",4),(\"Un mundo feliz\", 2),(\"Lolita\", 5),\\\n",
+    "              (\"Crimen y castigo\",2),(\"Python from for to pro\", 0),(\"El señor de los anillos\", 6),\\\n",
+    "              (\"Cien años de soledad\", 5),(\"Harry Potter\", 9),(\"Lectura Fácil\", 4),(\"Seda\", 2),\\\n",
+    "              (\"La chica de nieve\", 6),(\"El día que se perdió la cordura\", 3), (\"Data Science\", 0)]\n",
+    "\n",
+    "for u in biblioteca:\n",
+    "    if u[0] == \"Seda\":\n",
+    "        print(u[1])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -178,15 +211,32 @@
    ],
    "source": [
     "pendiente = 1984\n",
-    "pendiente = str(\"1984\")\n",
+    "pendiente = str(pendiente)\n",
     "\n",
     "libros = [\"El mal de Corcira\", \"Un mundo feliz\", \"Lolita\", \"Crimen y castigo\", \"Python from for to pro\",\\\n",
     "          \"El señor de los anillos\", \"Cien años de soledad\", \"Harry Potter\", \"Lectura Fácil\", \"Seda\",\\\n",
     "          \"La chica de nieve\", \"El día que se perdió la cordura\", \"Data Science\"]\n",
     "\n",
     "libros.append(\"1984\")\n",
-    "print(libros)\n",
-    "\n"
+    "print(libros)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['El mal de Corcira',\n 'Un mundo feliz',\n 'Lolita',\n 'Crimen y castigo',\n 'Python from for to pro',\n 'El señor de los anillos',\n 'Cien años de soledad',\n 'Harry Potter',\n 'Lectura Fácil',\n 'Seda',\n 'La chica de nieve',\n 'El día que se perdió la cordura',\n 'Data Science',\n '1984']"
+     },
+     "metadata": {},
+     "execution_count": 140
+    }
+   ],
+   "source": [
+    "libros\n"
    ]
   },
   {
@@ -209,24 +259,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "<class 'tuple'>\n[('El mal de Corcira', 4), ('Un mundo feliz', 2), ('Lolita', 5), ('Crimen y castigo', 2), ('Python from for to pro', 0), ('El señor de los anillos', 6), ('Cien años de soledad', 5), ('Harry Potter', 9), ('Lectura Fácil', 4), ('Seda', 2), ('La chica de nieve', 6), ('El día que se perdió la cordura', 3), ('Data Science', 0), 'Balada de pájaros cantores y serpientes, 10', 'Balada de pájaros cantores y serpientes, 10']\n"
+     "text": "<class 'list'>\n<class 'tuple'>\n"
     }
    ],
    "source": [
     "libro_1 = \"Balada de pájaros cantores y serpientes\"\n",
     "uds_1 = 10\n",
-    "nuevo_libro = libro_1 + \", \" + str(uds_1)\n",
-    "t = tuple(nuevo_libro)\n",
-    "print(type(t))\n",
+    "nuevo_libro = [libro_1, uds_1]\n",
+    "print(type(nuevo_libro))\n",
+    "nuevo_libro = tuple(nuevo_libro)\n",
+    "print(type(nuevo_libro))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[('El mal de Corcira', 4),\n ('Un mundo feliz', 2),\n ('Lolita', 5),\n ('Crimen y castigo', 2),\n ('Python from for to pro', 0),\n ('El señor de los anillos', 6),\n ('Cien años de soledad', 5),\n ('Harry Potter', 9),\n ('Lectura Fácil', 4),\n ('Seda', 2),\n ('La chica de nieve', 6),\n ('El día que se perdió la cordura', 3),\n ('Data Science', 0),\n ('Balada de pájaros cantores y serpientes', 10)]"
+     },
+     "metadata": {},
+     "execution_count": 151
+    }
+   ],
+   "source": [
     "biblioteca.append(nuevo_libro)\n",
-    "\n",
-    "print(biblioteca)"
+    "biblioteca\n"
    ]
   },
   {
@@ -266,6 +333,51 @@
     "\n",
     "print(biblioteca)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['El mal de Corcira', 4]"
+     },
+     "metadata": {},
+     "execution_count": 152
+    }
+   ],
+   "source": [
+    "t = list(biblioteca[0])\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['El mal de Corcira', 5]"
+     },
+     "metadata": {},
+     "execution_count": 153
+    }
+   ],
+   "source": [
+    "t[1] = t[1]+1\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -351,13 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "<class 'list'>\n"
+     "text": "<class 'list'>\nPython from for to pro\nData Science\n"
     }
    ],
    "source": [
@@ -369,8 +481,9 @@
     "print(type(biblioteca))\n",
     "\n",
     "for titulo in biblioteca:\n",
-    "    if([1]==0):\n",
-    "        print([0],[1])"
+    "    if titulo[1]==0:\n",
+    "        print(titulo[0])\n",
+    "        "
    ]
   },
   {
@@ -383,12 +496,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Python from for to pro\nData Science\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['Python from for to pro', 'Data Science']"
+     },
+     "metadata": {},
+     "execution_count": 158
+    }
+   ],
+   "source": [
+    "missing = []\n",
+    "\n",
+    "for titulo in biblioteca:\n",
+    "    if titulo[1] == 0:\n",
+    "        faltante = titulo[0]\n",
+    "        print(faltante)\n",
+    "        missing.append(faltante)\n",
+    "\n",
+    "missing"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "????"
-   ]
+   "source": []
   }
  ],
  "metadata": {
