--- a/ProjectsDS/Week2/day2/exercises/Exercises_1-8Solvedinclass.ipynb
+++ b/ProjectsDS/Week2/day2/exercises/Exercises_1-8Solvedinclass.ipynb
@@ -36,24 +36,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "numero_bridge = 15"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Crea una variable llamada `nombre_calle`que sea un string y sea **Recoletos**\n",
+    "2. Crea una variable llamada `nombre_calle` que sea un string y sea **Recoletos**\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "nombre_calle = \"Recoletos\""
    ]
   },
   {
@@ -63,18 +65,19 @@
     "3. Crea una variable llamada `gusto_personal` que sea **True** si eres más de playa y **False** si eres más de montaña.\n",
     "```python\n",
     "#Ejemplo: \n",
-    "gusto_personal = True  # Si te gusta más la montaña\n",
-    "gusto_personal = False  # Si te gusta más la playa\n",
+    "gusto_personal = False  # Si te gusta más la montaña\n",
+    "gusto_personal = True  # Si te gusta más la playa\n",
     "``` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "gusto_personal = False"
    ]
   },
   {
@@ -86,11 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "nada = None"
    ]
   },
   {
@@ -102,11 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "lista_direccion = [numero_bridge, nombre_calle]"
    ]
   },
   {
@@ -122,11 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "horas_sueno = \"5\""
    ]
   },
   {
@@ -139,11 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "lista_informacion = [\n",
+    "    numero_bridge, \n",
+    "    nombre_calle,\n",
+    "    gusto_personal,\n",
+    "    nada,\n",
+    "    lista_direccion,\n",
+    "    horas_sueno\n",
+    "    ]"
    ]
   },
   {
@@ -155,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +180,24 @@
     "del nada\n",
     "del lista_direccion\n",
     "del horas_sueno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "lista_informacion"
    ]
   },
   {
@@ -205,11 +237,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
    "source": [
-    "#your code here"
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15:Recoletos\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "print(str(lista_informacion[0]) + \":\" + lista_informacion[1])"
    ]
   },
   {
@@ -221,11 +278,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
    "source": [
-    "#your code here"
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "20\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "print(lista_informacion[0] + int(lista_informacion[-1]))"
    ]
   },
   {
@@ -237,29 +319,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
    "source": [
-    "#your code here"
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15 : Recoletos : False : 5\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "print(str(lista_informacion[0]) + \" : \" + lista_informacion[1] + \" : \" + str(lista_informacion[2]) + \" : \" + lista_informacion[-1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Accediendo a la lista que ocupa la quinta posición de `lista_informacion`, muestra por pantalla la suma de lo siguiente. Si en la quinta posición de tu `lista_informacion` no encuentras una lista, preguntanos:\n",
+    "4. Accediendo a la lista que ocupa la cuarta posición de `lista_informacion`, muestra por pantalla la suma de lo siguiente. Si en la cuarta posición de tu `lista_informacion` no encuentras una lista, preguntanos:\n",
     "     - La concatenación de los dos elementos. \n",
     "     - La multiplicación del tamaño de la lista y el tamaño del número de caracteres que tiene el nombre de la calle.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
    "source": [
-    "#your code here"
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15Recoletos\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "\n",
+    "print(str(lista_informacion[4][0]) + lista_informacion[4][1])"
    ]
   },
   {
@@ -273,7 +406,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para resolver los siguientes ejercicios será necesario que definas una función para cada apartado, tú elige el nombre salvo que se especifique, pero asegúrate de que defines un único parámetro `lista`, que al llamar a la función se corresponderá con la variable `lista_información`. "
+    "Para resolver los siguientes ejercicios será necesario que definas una función para cada apartado, tú eliges el nombre salvo que se especifique, pero asegúrate de que defines un único argumento/parámetro `lista`, que al llamar a la función se corresponderá con la variable `lista_información`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(lista):\n",
+    "\n",
+    "f(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6\n"
+    }
+   ],
+   "source": [
+    "def suma(a, b):\n",
+    "    print(a + b)\n",
+    "\n",
+    "suma(a=2, b=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[2, 4]\n"
+    }
+   ],
+   "source": [
+    "lista_i = [2, 4]\n",
+    "def suma(lista):\n",
+    "    print(lista)\n",
+    "\n",
+    "suma(lista=lista_i)"
    ]
   },
   {
@@ -292,11 +473,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Me gusta la tranquilidad\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "\n",
+    "def f_1_5(lista):\n",
+    "    if lista[2] == True:\n",
+    "        print(\"Me gusta ver las carnes al aire libre\")\n",
+    "    elif lista[2] == False:\n",
+    "        print(\"Me gusta la tranquilidad\")\n",
+    "\n",
+    "f_1_5(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "def f_1_5(lista):\n",
+    "    if lista[2] == True:\n",
+    "        return \"Me gusta ver las carnes al aire libre\"\n",
+    "    elif lista[2] == False:\n",
+    "        return \"Me gusta la tranquilidad\"\n",
+    "\n",
+    "x = f_1_5(lista=lista_informacion)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[2, 3, [1]]"
+     },
+     "metadata": {},
+     "execution_count": 45
+    }
+   ],
+   "source": [
+    "l = [2, 3]\n",
+    "\n",
+    "def anade_uno(lista):\n",
+    "    lista.append([1]\n",
+    "\n",
+    "anade_uno(lista=l)\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[2, 3, 1, 'X']\n"
+    }
+   ],
+   "source": [
+    "l1 = [2, 3, 1, \"X\"]\n",
+    "\n",
+    "def parte_lista_en_dos(lista):\n",
+    "    lista = lista[0:2]\n",
+    "    return lista\n",
+    "\n",
+    "l1 = parte_lista_en_dos(lista=l1)\n",
+    "print(l1)"
    ]
   },
   {
@@ -308,11 +583,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
    "source": [
-    "#your code here"
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Hoy estoy cansado\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "\n",
+    "def f_1_6(lista):\n",
+    "    horas_sueno_int = int(lista[-1])\n",
+    "    if horas_sueno_int > 7:\n",
+    "        print(\"Hoy me como el mundo\")\n",
+    "    elif horas_sueno_int < 7:\n",
+    "        print(\"Hoy estoy cansado\")\n",
+    "\n",
+    "f_1_6(lista=lista_informacion)"
    ]
   },
   {
@@ -324,11 +632,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15\nRecoletos\nFalse\nNone\n[15, 'Recoletos']\n5\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "\n",
+    "def f_1_7_recorre(lista):\n",
+    "    for elem in lista:\n",
+    "        print(elem)\n",
+    "\n",
+    "f_1_7_recorre(lista=lista_informacion)\n"
    ]
   },
   {
@@ -340,11 +660,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
    "source": [
-    "#your code here"
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15--> OK\nRecoletos--> OK\nFalse--> OK\nNone--> OK\n[15, 'Recoletos']--> OK\n5--> OK\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "\n",
+    "def f_1_8_recorre_concatena(lista):\n",
+    "    for elem in lista:\n",
+    "        print(str(elem) + \"--> OK\")\n",
+    "\n",
+    "f_1_8_recorre_concatena(lista=lista_informacion)"
    ]
   },
   {
@@ -356,11 +706,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n"
    ]
   },
   {
@@ -1045,7 +1395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.4-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
