--- a/ProjectsDS/Week2/day4/exercises/Exercises_1-8_v2.ipynb
+++ b/ProjectsDS/Week2/day4/exercises/Exercises_1-8_v2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,10 +967,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "lista_informacion"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "12 . Recorrer `lista` para mostrar todos los elementos que contiene excepto el primer elemento de la lista que se encuentra en quinta posición. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15\nRecoletos\nFalse\nNone\n[15, 'Recoletos']\n5\n"
+    }
+   ],
+   "source": [
+    "for elem in lista_informacion:\n",
+    "    if elem == x[0]:\n",
+    "        continue\n",
+    "        print(elem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def elemento(lista):\n",
+    "    for elem in lista:\n",
+    "        if elem == lista[4][0]:\n",
+    "            continue\n",
+    "        print(elem)\n",
+    "​\n",
+    "elemento(lista=lista_informacion)"
    ]
   },
   {
@@ -1123,11 +1192,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15\nRecoletos\nNone\n[15, 'Recoletos']\n5\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "\n",
+    "def f_13(lista):\n",
+    "    for _ in lista:\n",
+    "        if _ == True:\n",
+    "            continue\n",
+    "        elif _ == False:\n",
+    "            continue\n",
+    "        print(_)\n",
+    "\n",
+    "f_13(lista=lista_informacion)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15\nRecoletos\nNone\n[15, 'Recoletos']\n5\n"
+    }
+   ],
+   "source": [
+    "def f_13(lista):\n",
+    "    for _ in lista:\n",
+    "        if _ == True or _ == False:\n",
+    "            continue\n",
+    "        print(_)\n",
+    "\n",
+    "f_13(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "15\nRecoletos\nNone\n[15, 'Recoletos']\n5\n"
+    }
+   ],
+   "source": [
+    "def f_13(lista):\n",
+    "    for _ in lista:\n",
+    "        if isinstance(_, (bool)):\n",
+    "            continue\n",
+    "        print(_)\n",
+    "\n",
+    "f_13(lista=lista_informacion)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "1 == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "1 is 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "True\nTrue\n"
+    }
+   ],
+   "source": [
+    "x = True\n",
+    "\n",
+    "print(x is True)\n",
+    "print(x == True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "def f_13(lista):\n",
+    "    for _ in lista:\n",
+    "        if isinstance(_, (bool)):\n",
+    "            continue\n",
+    "        print(_)\n",
+    "\n",
+    "f_13(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pos, x in enumerate(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 0\n",
+    "for x in lista:\n",
+    "    pos = pos + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "z\ny\n"
+    }
+   ],
+   "source": [
+    "l = [\"z\", \"x\", \"y\"]\n",
+    "\n",
+    "for x in l:\n",
+    "    if x == l[1]:\n",
+    "        continue\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\nz\n------------\n1\nx\n------------\n2\ny\n------------\n"
+    }
+   ],
+   "source": [
+    "l = [\"z\", \"x\", \"y\"]\n",
+    "lenght_l = len(l) \n",
+    "\n",
+    "for i in range(lenght_l):\n",
+    "    print(i)\n",
+    "    print(l[i])\n",
+    "    print(\"------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\nz\n------\n1\nx\n------\n2\ny\n------\n"
+    }
+   ],
+   "source": [
+    "for pos, elem in enumerate(l):\n",
+    "    print(pos)\n",
+    "    print(elem)\n",
+    "    print(\"------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f_13(lista):\n",
+    "    for _ in lista:\n",
+    "        print(_)\n",
+    "\n",
+    "f_13(lista=lista_informacion)"
    ]
   },
   {
@@ -1139,11 +1452,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Help on class range in module builtins:\n\nclass range(object)\n |  range(stop) -> range object\n |  range(start, stop[, step]) -> range object\n |  \n |  Return an object that produces a sequence of integers from start (inclusive)\n |  to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\n |  start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\n |  These are exactly the valid indices for a list of 4 elements.\n |  When step is given, it specifies the increment (or decrement).\n |  \n |  Methods defined here:\n |  \n |  __bool__(self, /)\n |      self != 0\n |  \n |  __contains__(self, key, /)\n |      Return key in self.\n |  \n |  __eq__(self, value, /)\n |      Return self==value.\n |  \n |  __ge__(self, value, /)\n |      Return self>=value.\n |  \n |  __getattribute__(self, name, /)\n |      Return getattr(self, name).\n |  \n |  __getitem__(self, key, /)\n |      Return self[key].\n |  \n |  __gt__(self, value, /)\n |      Return self>value.\n |  \n |  __hash__(self, /)\n |      Return hash(self).\n |  \n |  __iter__(self, /)\n |      Implement iter(self).\n |  \n |  __le__(self, value, /)\n |      Return self<=value.\n |  \n |  __len__(self, /)\n |      Return len(self).\n |  \n |  __lt__(self, value, /)\n |      Return self<value.\n |  \n |  __ne__(self, value, /)\n |      Return self!=value.\n |  \n |  __new__(*args, **kwargs) from builtins.type\n |      Create and return a new object.  See help(type) for accurate signature.\n |  \n |  __reduce__(...)\n |      helper for pickle\n |  \n |  __repr__(self, /)\n |      Return repr(self).\n |  \n |  __reversed__(...)\n |      Return a reverse iterator.\n |  \n |  count(...)\n |      rangeobject.count(value) -> integer -- return number of occurrences of value\n |  \n |  index(...)\n |      rangeobject.index(value, [start, [stop]]) -> integer -- return index of value.\n |      Raise ValueError if the value is not present.\n |  \n |  ----------------------------------------------------------------------\n |  Data descriptors defined here:\n |  \n |  start\n |  \n |  step\n |  \n |  stop\n\n"
+    }
+   ],
    "source": [
-    "#your code here"
+    "help(range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[1, 2, 6, 10]"
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "l = [1, 2, 6, 10]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 1, 2, 3, 4]"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "list(range(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "range(5)[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\n2\n4\n"
+    }
+   ],
+   "source": [
+    "for i in range(0, 5, 2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "source": [
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "5\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "def f_14(lista):\n",
+    "    for _ in range(len(lista)):\n",
+    "        if _ == len(lista) - 1:\n",
+    "            print(_)\n",
+    "\n",
+    "\n",
+    "f_14(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "5\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "def f_14(lista):\n",
+    "    for pos, elem in enumerate(lista):\n",
+    "        if pos == len(lista) - 1:\n",
+    "            print(elem)\n",
+    "\n",
+    "f_14(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "5\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "def f_14(lista):\n",
+    "    pos = 0\n",
+    "    for elem in lista:\n",
+    "        if pos == len(lista) - 1:\n",
+    "            print(elem)\n",
+    "        pos = pos + 1\n",
+    "\n",
+    "f_14(lista=lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "5\n"
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "def f_14(lista):\n",
+    "    for elem in lista:\n",
+    "        if elem == lista[-1]:\n",
+    "            print(elem)\n",
+    "\n",
+    "f_14(lista=lista_informacion)"
    ]
   },
   {
@@ -1155,11 +1650,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "lista_informacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "#your code here\n",
+    "\n",
+    "def funcion_zona(lista):\n",
+    "    zona = None\n",
+    "    con1 = int(lista[-1]) > 7\n",
+    "    con2 = lista[2] == True\n",
+    "    con3 = (int(lista[-1]) + lista[0]) < 24\n",
+    "    for x in lista:\n",
+    "        if con1 and con2 and con3:\n",
+    "            zona = True\n",
+    "            break\n",
+    "        else:\n",
+    "            zona = False\n",
+    "            break\n",
+    "    return zona\n",
+    "\n",
+    "\n",
+    "z = funcion_zona(lista=lista_informacion)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "def funcion_zona(lista):\n",
+    "    zona = None\n",
+    "    con1 = int(lista[-1]) > 7\n",
+    "    con2 = lista[2] == True\n",
+    "    con3 = (int(lista[-1]) + lista[0]) < 24\n",
+    "    for pos, elem in enumerate(lista):\n",
+    "        if pos == len(lista) - 1:\n",
+    "            con1 = int(elem) > 7\n",
+    "        elif pos == 2:\n",
+    "            con2 = (elem == True)\n",
+    "            # TODO Continuar mañana\n",
+    "        \n",
+    "    return zona\n",
+    "z = funcion_zona(lista=lista_informacion)\n",
+    "z"
    ]
   },
   {
@@ -1241,6 +1805,13 @@
    "source": [
     "#your code here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
